--- a/package.json
+++ b/package.json
@@ -16,8 +16,10 @@
     "body-parser": "^1.20.2",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "express-session": "^1.17.3",
     "https": "^1.0.0",
     "mysql": "^2.18.1",
+    "postgres": "^3.4.3",
     "querystring": "^0.2.1",
     "url": "^0.11.3"
   }
