--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "mysql": "^2.18.1",
     "postgres": "^3.4.3",
     "querystring": "^0.2.1",
-    "url": "^0.11.3"
+    "url": "^0.11.3",
+    "xmlhttprequest": "^1.8.0"
   }
 }
