--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "express-session": "^1.17.3",
     "https": "^1.0.0",
     "mysql": "^2.18.1",
+    "mysql2": "^3.7.0",
     "postgres": "^3.4.3",
     "querystring": "^0.2.1",
     "url": "^0.11.3",
