--- a/.env
+++ b/.env
@@ -5,7 +5,8 @@ DB_PASS='AVNS_5t9ESMA6P_vVn2yZ-j1'
 # DB_PASS='Luis0908' 
 DB_HOST='mysql-c30f8ed-proyectotecmilenio.a.aivencloud.com'
 DB_PORT=17105
-PORT=8080
+# PORT=8080
+PORT=443
 SESSION_SECRET='some-secret'
 NODE_ENV=development
 
