--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js"
+    "start": "nodemon server.js"
   },
   "author": "",
   "license": "ISC",
@@ -21,6 +21,7 @@
     "https": "^1.0.0",
     "mysql": "^2.18.1",
     "mysql2": "^3.7.0",
+    "node.js": "^0.0.1-security",
     "postgres": "^3.4.3",
     "querystring": "^0.2.1",
     "url": "^0.11.3",
