--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "mocha": "^10.2.0"
   },
   "dependencies": {
+    "@netlify/functions": "^2.4.1",
+    "@types/express": "^4.17.21",
     "body-parser": "^1.20.2",
     "cookie-parser": "^1.4.6",
     "dotenv": "^16.3.1",
@@ -24,6 +26,7 @@
     "node.js": "^0.0.1-security",
     "postgres": "^3.4.3",
     "querystring": "^0.2.1",
+    "serverless-http": "^3.2.0",
     "url": "^0.11.3",
     "xmlhttprequest": "^1.8.0"
   }
