--- a/netlify.toml
+++ b/netlify.toml
@@ -3,6 +3,6 @@
   node_bundler = "esbuild"
 [[redirects]]
   force = true
-  from = "/app/*"
+  from = "/api/*"
   status = 200
-  to = "/server/:splat"
+  to = "/.netlify/functions/server/:splat"
