--- a/.env
+++ b/.env
@@ -7,6 +7,8 @@ DB_HOST='mysql-c30f8ed-proyectotecmilenio.a.aivencloud.com'
 DB_PORT=17105
 PORT=8080
 # PORT=443
+HOST = 'localhost'
+HOST = 'srv463361.hstgr.cloud'
 SESSION_SECRET='some-secret'
 NODE_ENV=development
 
