--- a/.env
+++ b/.env
@@ -1,24 +1,24 @@
-DB_NAME='libros' 
-DB_USER='avnadmin'
-# DB_PASS='AVNS_B4Ljd4c-a73R3tp7ho8'
-DB_PASS='AVNS_5t9ESMA6P_vVn2yZ-j1'
-# DB_PASS='Luis0908' 
-DB_HOST='mysql-c30f8ed-proyectotecmilenio.a.aivencloud.com'
-DB_PORT=17105
-PORT=8080
-# PORT=443
-HOST = 'localhost'
-HOST = 'srv463361.hstgr.cloud'
-SESSION_SECRET='some-secret'
-NODE_ENV=development
-
-
 # DB_NAME='libros' 
-# DB_USER='root'
+# DB_USER='avnadmin'
+# DB_PASS='AVNS_B4Ljd4c-a73R3tp7ho8'
+# DB_PASS='AVNS_5t9ESMA6P_vVn2yZ-j1'
 # DB_PASS='Luis0908' 
-# DB_HOST=localhost
-# DB_PORT=3306
+# DB_HOST='mysql-c30f8ed-proyectotecmilenio.a.aivencloud.com'
+# DB_PORT=17105
 # PORT=8080
+# PORT=443
+# HOST = 'localhost'
+# HOST = 'srv463361.hstgr.cloud'
 # SESSION_SECRET='some-secret'
 # NODE_ENV=development
+
+
+DB_NAME='libros' 
+DB_USER='root'
+DB_PASS='Luis0908' 
+DB_HOST=localhost
+DB_PORT=3306
+PORT=80
+SESSION_SECRET='some-secret'
+NODE_ENV=development
 
